<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nsv_detailFoodList"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:id="@+id/llfrgdetailfood"
        android:padding="@dimen/detailfoodlist">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredient" />

            <TextView
                android:id="@+id/tv_detaillistfood_ingredient"
                style="?android:textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dummy_ingredient" />
        </LinearLayout>

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:id="@+id/tv_frgdetailfood_step"
            android:layout_height="wrap_content"
            android:text="@string/step" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detaillistfood_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
