<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_food"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:cardUseCompatPadding="true"
    android:layout_margin="8dp"
    app:contentPadding="8dp"
    android:focusable="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_item_food"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_gravity="center_vertical"
            android:background="@color/cardview_dark_background"
            android:contentDescription="@string/item_food"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_item_food" />
        <TextView
            android:id="@+id/tv_item_title"
            style="?android:textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_title" />
        <TextView
            android:id="@+id/tv_item_ingredient"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_ingredient" />
        <TextView
            android:id="@+id/tv_item_step"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_step" />
        <TextView
            android:id="@+id/tv_item_serving"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_servings" />
    </LinearLayout>
</androidx.cardview.widget.CardView>