<resources>
    <string name="app_name">MursitAffandi-Baking</string>
    <string name="main_error_icon_desc">flag_error_connection</string>
    <string name="btn_rerequest">Retry</string>
    <string name="food_title">Name food</string>
    <string name="food_ingredient">food ingredient</string>
    <string name="food_step">food_step</string>
    <string name="food_servings">serving for</string>
    <string name="title_activity_detail_food">DetailFoodActivity</string>
    <string name="action_settings">Settings</string>
    <string name="ingredient">Ingredient</string>
    <string name="step">Step</string>
    <string name="servingfor">Serving</string>
    <string name="title_detailfood_list">Baking</string>
    <string name="title_detailfood_detail">DetailFood Detail</string>
    <string name="dummy_ingredient">sugar</string>
    <string name="btn_next_step">Next</string>
    <string name="btn_prev_step">Previous</string>
    <string name="image_step">preview step</string>
    <string name="text_step">this step</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Ingredients of %s</string>
    <string name="item_food">item food</string>
</resources>
